--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portafolio personal de Dario Romero, desarrollador web con experiencia en frontend y backend.">
-    <meta name="keywords" content="desarrollador web, frontend, backend, HTML, CSS, JavaScript, Bootstrap, MySQL, Java, Python">
+    <meta name="description"
+        content="Portafolio personal de Dario Romero, desarrollador web con experiencia en frontend y backend.">
+    <meta name="keywords"
+        content="desarrollador web, frontend, backend, HTML, CSS, JavaScript, Bootstrap, MySQL, Java, Python">
     <title>Portafolio Personal - Dario Romero</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,8 +23,8 @@
         .carousel-control-next {
             width: 5%;
             background-color: rgba(0, 0, 0, 0.5);
-            top: 50%;
-            transform: translateY(-50%);
+            top: 5%;
+            bottom: 10%;
             opacity: 2;
         }
 
@@ -33,6 +35,10 @@
         .carousel-control-prev:hover,
         .carousel-control-next:hover {
             opacity: 1;
+        }
+
+        .card:hover {
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
@@ -133,25 +139,29 @@
                 <div class="col-md-6">
                     <h5>HTML</h5>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">90%</div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <h5>CSS</h5>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">90%</div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <h5>JavaScript</h5>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                        <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100">60%</div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <h5>Python</h5>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
+                            aria-valuemin="0" aria-valuemax="100">75%</div>
                     </div>
                 </div>
             </div>
@@ -173,7 +183,8 @@
                                     <img src="imgs/proyecto1.png" class="card-img-top" alt="Juego Tierra Media">
                                     <div class="card-body">
                                         <h5 class="card-title">Juego Tierra Media</h5>
-                                        <p class="card-text">Un mini juego en Django basado en El Señor de los Anillos donde puedes
+                                        <p class="card-text">Un mini juego en Django basado en El Señor de los Anillos
+                                            donde puedes
                                             crear armas, personajes y realizar batallas.</p>
                                         <a href="https://github.com/daninogales30/juego_tierra_media_django.git"
                                             class="btn btn-primary">Ver en GitHub</a>
@@ -185,9 +196,11 @@
                                     <img src="imgs/proyecto2.png" class="card-img-top" alt="Liga de Fútbol">
                                     <div class="card-body">
                                         <h5 class="card-title">Liga de Fútbol</h5>
-                                        <p class="card-text">Una página web que muestra la tabla de liga y permite ver los detalles
+                                        <p class="card-text">Una página web que muestra la tabla de liga y permite ver
+                                            los detalles
                                             de cada equipo.</p>
-                                        <a href="https://github.com/DarioRodel/ProyectoFinalMadrid.git" class="btn btn-primary">Ver
+                                        <a href="https://github.com/DarioRodel/ProyectoFinalMadrid.git"
+                                            class="btn btn-primary">Ver
                                             en GitHub</a>
                                     </div>
                                 </div>
@@ -198,11 +211,14 @@
                         <div class="row">
                             <div class="col-md-6 offset-md-3 mb-6">
                                 <div class="card h-100">
-                                    <img src="imgs/techwave.png" class="card-img-top" alt="Página web productos electrónicos">
+                                    <img src="imgs/techwave.png" class="card-img-top"
+                                        alt="Página web productos electrónicos">
                                     <div class="card-body text-center">
                                         <h5 class="card-title">Página web productos electrónicos</h5>
-                                        <p class="card-text">Una página web de productos electrónicos con distintas secciones como carrito, contacto, entre otras.</p>
-                                        <a href="https://github.com/daninogales30/proyecto_cliente.git" class="btn btn-primary">Ver en GitHub</a>
+                                        <p class="card-text">Una página web de productos electrónicos con distintas
+                                            secciones como carrito, contacto, entre otras.</p>
+                                        <a href="https://github.com/daninogales30/proyecto_cliente.git"
+                                            class="btn btn-primary">Ver en GitHub</a>
                                     </div>
                                 </div>
                             </div>
@@ -211,7 +227,8 @@
                 </div>
                 <!-- Controles del carrusel -->
 
-                <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Siguiente</span>
                 </button>
@@ -227,15 +244,15 @@
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">Python: Cómo usar JSON</h5>
-                            <p class="card-text">Aprende a cargar y procesar datos JSON en Python.</p>
+                            <h5 class="card-title"><a href="https://developer.mozilla.org/es/docs/Learn_web_development/Getting_started/Your_first_website/Adding_interactivity">Cómo usar JavaScript</a></h5>
+                            <p class="card-text">Aprende a usar JavaScript de forma eficiente</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">Python: Cómo escribir en un archivo</h5>
+                            <h5 class="card-title"><a href="https://www.freecodecamp.org/espanol/news/python-como-escribir-en-un-archivo-abrir-leer-escribir-y-otras-funciones-de-archivos-explicadas/">Python: Cómo escribir en un archivo</a></h5>
                             <p class="card-text">Guía completa para leer y escribir archivos en Python.</p>
                         </div>
                     </div>
@@ -243,7 +260,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title">¿Para qué se usa Python?</h5>
+                            <h5 class="card-title"><a href="https://www.datacamp.com/es/blog/what-is-python-used-for">¿Para qué se utiliza Python?</a></h5>
                             <p class="card-text">Descubre los usos principales del lenguaje de programación Python.</p>
                         </div>
                     </div>
@@ -261,7 +278,8 @@
                     <div class="carousel-item active">
                         <div class="card">
                             <div class="card-body">
-                                <p class="card-text">Dario es un gran profesional en todos los momentos del trabajo, gran persona y ayuda a todas las personas cuando lo necesitan</p>
+                                <p class="card-text">Dario es un gran profesional en todos los momentos del trabajo,
+                                    gran persona y ayuda a todas las personas cuando lo necesitan</p>
                                 <h5 class="card-title">- Cliente 1</h5>
                             </div>
                         </div>
@@ -269,14 +287,16 @@
                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
-                                <p class="card-text">Gran desarrollador de programas en lenguajes de programacion como css,html,python etc</p>
+                                <p class="card-text">Gran desarrollador de programas en lenguajes de programacion como
+                                    css,html,python etc</p>
                                 <h5 class="card-title">- Cliente 2</h5>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Controles del carrusel -->
-                <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Siguiente</span>
                 </button>
@@ -294,7 +314,8 @@
                     GitHub</a>
                 <a href="https://www.instagram.com/dariorodel?igsh=MThkYjY1ODh6NHFrYw==" class="btn btn-outline-dark"><i
                         class="bi bi-instagram"></i> Instagram</a>
-                        <a href="imgs/CV-DarioRomeroDelgado.pdf" class="btn btn-outline-dark"><i class="fa-solid fa-paperclip"></i> CV</a>
+                <a href="imgs/CV-DarioRomeroDelgado.pdf" class="btn btn-outline-dark"><i
+                        class="fa-solid fa-paperclip"></i> CV</a>
             </div>
         </div>
     </section>
