--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,15 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand">Mi Portafolio</a>
+            <a class="navbar-brand">Portafolio-Dario Romero Delgado</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!--Div para la barra de navegacion-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <!--Lista de todos los sitios para navegar-->
                     <li class="nav-item">
                         <a class="nav-link" href="#about">Sobre mí</a>
                     </li>
@@ -76,7 +78,7 @@
             </div>
         </div>
     </nav>
-
+    <!--Seccion para el hero-->
     <section id="hero" class="bg-light text-center py-5">
         <div class="container">
             <img src="imgs/yo.jpg" alt="Foto de perfil de Dario Romero" class="py-5 mb-3" width="150">
@@ -99,6 +101,7 @@
     <section id="experience" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Experiencia <i class="fa-solid fa-book"></i></h2>
+            <!--Divs para la experiencia-->
             <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
@@ -135,6 +138,7 @@
     <section id="skills" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Habilidades <i class="fa-solid fa-cogs"></i></h2>
+            <!--Diferentes columnas para las habilidades-->
             <div class="row">
                 <div class="col-md-6">
                     <h5>HTML</h5>
@@ -178,6 +182,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
+                            <!--Div para los proyectos-->
                             <div class="col-md-6 mb-4">
                                 <div class="card h-100">
                                     <img src="imgs/proyecto1.png" class="card-img-top" alt="Juego Tierra Media">
@@ -241,6 +246,7 @@
         <div class="container">
             <h2 class="text-center mb-5">Artículos <i class="fa-solid fa-newspaper"></i></h2>
             <div class="row">
+                <!--Div para los articulos-->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
@@ -273,6 +279,7 @@
     <section id="testimonials" class="bg-light py-5">
         <div class="container">
             <h2 class="text-center mb-5">Testimonios <i class="fa-solid fa-comments"></i></h2>
+            <!--Testimonios para hacer el carrusel-->
             <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -308,6 +315,7 @@
         <div class="container">
             <h2 class="text-center mb-5">Contacto <i class="fa-solid fa-address-book"></i></h2>
             <div class="text-center">
+                <!--Diferentes sitios de contacto-->
                 <a href="https://x.com/DarioRodel05?t=hvfbVWLvjLuQViGTMuSYOg&s=09" class="btn btn-outline-dark me-2"><i
                         class="bi bi-twitter"></i> X</a>
                 <a href="https://github.com/DarioRodel" class="btn btn-outline-dark me-2"><i class="bi bi-github"></i>
