--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,7 @@
             <h2 class="text-center mb-5">Experiencia <i class="fa-solid fa-book"></i></h2>
             <!--Divs para la experiencia-->
             <div class="row">
+                <!--Experiencia Frontend-->
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
                         <div class="card-body">
@@ -112,6 +113,7 @@
                         </div>
                     </div>
                 </div>
+                <!--Experiencia Backend-->
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
                         <div class="card-body">
@@ -121,6 +123,7 @@
                         </div>
                     </div>
                 </div>
+                <!--Experiencia de otros-->
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
                         <div class="card-body">
@@ -184,6 +187,7 @@
                         <div class="row">
                             <!--Div para los proyectos-->
                             <div class="col-md-6 mb-4">
+                                <!--Proyecto 1-->
                                 <div class="card h-100">
                                     <img src="imgs/proyecto1.png" class="card-img-top" alt="Juego Tierra Media">
                                     <div class="card-body">
@@ -197,6 +201,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
+                                <!--Proyecto 2-->
                                 <div class="card h-100">
                                     <img src="imgs/proyecto2.png" class="card-img-top" alt="Liga de Fútbol">
                                     <div class="card-body">
@@ -215,6 +220,7 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-6 offset-md-3 mb-6">
+                                <!--Proyecto 3-->
                                 <div class="card h-100">
                                     <img src="imgs/techwave.png" class="card-img-top"
                                         alt="Página web productos electrónicos">
