--- a/portfolio.html
+++ b/portfolio.html
@@ -2,23 +2,27 @@
 <html lang="es">
 
 <head>
+    <!-- Metadatos básicos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Descripción y palabras clave para SEO -->
     <meta name="description"
         content="Portafolio personal de Dario Romero, desarrollador web con experiencia en frontend y backend.">
     <meta name="keywords"
         content="desarrollador web, frontend, backend, HTML, CSS, JavaScript, Bootstrap, MySQL, Java, Python">
+    <!-- Título de la página -->
     <title>Portafolio Personal - Dario Romero</title>
-    <!-- Bootstrap CSS -->
+    <!-- Enlace a Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
+    <!-- Enlace a Google Fonts (Roboto) -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Bootstrap Icons -->
+    <!-- Enlace a Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <!-- Custom CSS -->
+    <!-- Enlace a Font Awesome para íconos adicionales -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <!-- Estilos personalizados -->
     <style>
-        /* Estilos personalizados para el carrusel */
+        /* Estilos para los controles del carrusel */
         .carousel-control-prev,
         .carousel-control-next {
             width: 5%;
@@ -37,6 +41,7 @@
             opacity: 1;
         }
 
+        /* Efecto de sombra al pasar el mouse sobre las tarjetas */
         .card:hover {
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
         }
@@ -47,15 +52,17 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
+            <!-- Nombre del portafolio -->
             <a class="navbar-brand">Portafolio-Dario Romero Delgado</a>
+            <!-- Botón para colapsar la barra en dispositivos móviles -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!--Div para la barra de navegacion-->
+            <!-- Menú de navegación -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <!--Lista de todos los sitios para navegar-->
+                    <!-- Enlaces a las secciones del portafolio -->
                     <li class="nav-item">
                         <a class="nav-link" href="#about">Sobre mí</a>
                     </li>
@@ -78,10 +85,13 @@
             </div>
         </div>
     </nav>
-    <!--Seccion para el hero-->
+
+    <!-- Sección Presentación inicial -->
     <section id="hero" class="bg-light text-center py-5">
         <div class="container">
+            <!-- Foto de perfil -->
             <img src="imgs/yo.jpg" alt="Foto de perfil de Dario Romero" class="py-5 mb-3" width="150">
+            <!-- Nombre y título -->
             <h1 class="display-4">DARIO ROMERO DELGADO</h1>
             <p class="lead">Desarrollador Web</p>
         </div>
@@ -90,7 +100,9 @@
     <!-- Sección Sobre mí -->
     <section id="about" class="py-5">
         <div class="container text-center">
+            <!-- Título de la sección -->
             <h2 class="mb-4">Sobre mí <i class="fa-solid fa-user"></i></h2>
+            <!-- Descripción personal -->
             <p class="lead">Soy Dario Romero Delgado, un desarrollador web con experiencia en frontend y backend. Me
                 especializo en tecnologías como HTML, CSS, JavaScript, Bootstrap, MySQL, Java y Python. Disfruto
                 creando proyectos innovadores y mejorando mis habilidades constantemente.</p>
@@ -100,10 +112,11 @@
     <!-- Sección Experiencia -->
     <section id="experience" class="py-5">
         <div class="container">
+            <!-- Título de la sección -->
             <h2 class="text-center mb-5">Experiencia <i class="fa-solid fa-book"></i></h2>
-            <!--Divs para la experiencia-->
+            <!-- Tarjetas de experiencia -->
             <div class="row">
-                <!--Experiencia Frontend-->
+                <!-- Experiencia en Frontend -->
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
                         <div class="card-body">
@@ -113,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <!--Experiencia Backend-->
+                <!-- Experiencia en Backend -->
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
                         <div class="card-body">
@@ -123,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <!--Experiencia de otros-->
+                <!-- Otras experiencias -->
                 <div class="col-md-4 text-center">
                     <div class="card h-100">
                         <div class="card-body">
@@ -137,11 +150,12 @@
         </div>
     </section>
 
-    <!-- Seccion de habilidades-->
+    <!-- Sección de Habilidades -->
     <section id="skills" class="py-5">
         <div class="container">
+            <!-- Título de la sección -->
             <h2 class="text-center mb-5">Habilidades <i class="fa-solid fa-cogs"></i></h2>
-            <!--Diferentes columnas para las habilidades-->
+            <!-- Barras de progreso para las habilidades -->
             <div class="row">
                 <div class="col-md-6">
                     <h5>HTML</h5>
@@ -178,49 +192,47 @@
     <!-- Sección Proyectos -->
     <section id="projects" class="bg-light py-5">
         <div class="container">
+            <!-- Título de la sección -->
             <h2 class="text-center mb-5">Proyectos <i class="fa-solid fa-suitcase"></i></h2>
-
             <!-- Carrusel de proyectos -->
             <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
+                    <!-- Primer grupo de proyectos -->
                     <div class="carousel-item active">
                         <div class="row">
-                            <!--Div para los proyectos-->
+                            <!-- Proyecto 1: Juego Tierra Media -->
                             <div class="col-md-6 mb-4">
-                                <!--Proyecto 1-->
                                 <div class="card h-100">
                                     <img src="imgs/proyecto1.png" class="card-img-top" alt="Juego Tierra Media">
                                     <div class="card-body">
                                         <h5 class="card-title">Juego Tierra Media</h5>
                                         <p class="card-text">Un mini juego en Django basado en El Señor de los Anillos
-                                            donde puedes
-                                            crear armas, personajes y realizar batallas.</p>
+                                            donde puedes crear armas, personajes y realizar batallas.</p>
                                         <a href="https://github.com/daninogales30/juego_tierra_media_django.git"
                                             class="btn btn-primary">Ver en GitHub</a>
                                     </div>
                                 </div>
                             </div>
+                            <!-- Proyecto 2: Liga de Fútbol -->
                             <div class="col-md-6 mb-4">
-                                <!--Proyecto 2-->
                                 <div class="card h-100">
                                     <img src="imgs/proyecto2.png" class="card-img-top" alt="Liga de Fútbol">
                                     <div class="card-body">
                                         <h5 class="card-title">Liga de Fútbol</h5>
                                         <p class="card-text">Una página web que muestra la tabla de liga y permite ver
-                                            los detalles
-                                            de cada equipo.</p>
+                                            los detalles de cada equipo.</p>
                                         <a href="https://github.com/DarioRodel/ProyectoFinalMadrid.git"
-                                            class="btn btn-primary">Ver
-                                            en GitHub</a>
+                                            class="btn btn-primary">Ver en GitHub</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!-- Segundo grupo de proyectos -->
                     <div class="carousel-item">
                         <div class="row">
+                            <!-- Proyecto 3: Página web de productos electrónicos -->
                             <div class="col-md-6 offset-md-3 mb-6">
-                                <!--Proyecto 3-->
                                 <div class="card h-100">
                                     <img src="imgs/techwave.png" class="card-img-top"
                                         alt="Página web productos electrónicos">
@@ -237,7 +249,6 @@
                     </div>
                 </div>
                 <!-- Controles del carrusel -->
-
                 <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -250,29 +261,38 @@
     <!-- Sección de Artículos -->
     <section id="articles" class="py-5">
         <div class="container">
+            <!-- Título de la sección -->
             <h2 class="text-center mb-5">Artículos <i class="fa-solid fa-newspaper"></i></h2>
             <div class="row">
-                <!--Div para los articulos-->
+                <!-- Artículo 1: Cómo usar JavaScript -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="https://developer.mozilla.org/es/docs/Learn_web_development/Getting_started/Your_first_website/Adding_interactivity">Cómo usar JavaScript</a></h5>
+                            <h5 class="card-title"><a
+                                    href="https://developer.mozilla.org/es/docs/Learn_web_development/Getting_started/Your_first_website/Adding_interactivity">Cómo
+                                    usar JavaScript</a></h5>
                             <p class="card-text">Aprende a usar JavaScript de forma eficiente</p>
                         </div>
                     </div>
                 </div>
+                <!-- Artículo 2: Python: Cómo escribir en un archivo -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="https://www.freecodecamp.org/espanol/news/python-como-escribir-en-un-archivo-abrir-leer-escribir-y-otras-funciones-de-archivos-explicadas/">Python: Cómo escribir en un archivo</a></h5>
+                            <h5 class="card-title"><a
+                                    href="https://www.freecodecamp.org/espanol/news/python-como-escribir-en-un-archivo-abrir-leer-escribir-y-otras-funciones-de-archivos-explicadas/">Python:
+                                    Cómo escribir en un archivo</a></h5>
                             <p class="card-text">Guía completa para leer y escribir archivos en Python.</p>
                         </div>
                     </div>
                 </div>
+                <!-- Artículo 3: ¿Para qué se utiliza Python? -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="https://www.datacamp.com/es/blog/what-is-python-used-for">¿Para qué se utiliza Python?</a></h5>
+                            <h5 class="card-title"><a
+                                    href="https://www.datacamp.com/es/blog/what-is-python-used-for">¿Para qué se utiliza
+                                    Python?</a></h5>
                             <p class="card-text">Descubre los usos principales del lenguaje de programación Python.</p>
                         </div>
                     </div>
@@ -284,10 +304,12 @@
     <!-- Sección de Testimonios -->
     <section id="testimonials" class="bg-light py-5">
         <div class="container">
+            <!-- Título de la sección -->
             <h2 class="text-center mb-5">Testimonios <i class="fa-solid fa-comments"></i></h2>
-            <!--Testimonios para hacer el carrusel-->
+            <!-- Carrusel de testimonios -->
             <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
+                    <!-- Testimonio 1 -->
                     <div class="carousel-item active">
                         <div class="card">
                             <div class="card-body">
@@ -297,6 +319,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Testimonio 2 -->
                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
@@ -316,18 +339,20 @@
             </div>
         </div>
     </section>
+
     <!-- Sección Contacto -->
     <section id="contact" class="py-5">
         <div class="container">
+            <!-- Título de la sección -->
             <h2 class="text-center mb-5">Contacto <i class="fa-solid fa-address-book"></i></h2>
             <div class="text-center">
-                <!--Diferentes sitios de contacto-->
+                <!-- Enlaces a redes sociales y CV -->
                 <a href="https://x.com/DarioRodel05?t=hvfbVWLvjLuQViGTMuSYOg&s=09" class="btn btn-outline-dark me-2"><i
                         class="bi bi-twitter"></i> X</a>
                 <a href="https://github.com/DarioRodel" class="btn btn-outline-dark me-2"><i class="bi bi-github"></i>
                     GitHub</a>
-                <a href="https://www.instagram.com/dariorodel?igsh=MThkYjY1ODh6NHFrYw==" class="btn btn-outline-dark"><i
-                        class="bi bi-instagram"></i> Instagram</a>
+                <a href="https://www.instagram.com/dariorodel?igsh=MThkYjY1ODh6NHFrYw=="
+                    class="btn btn-outline-dark"><i class="bi bi-instagram"></i> Instagram</a>
                 <a href="imgs/CV-DarioRomeroDelgado.pdf" class="btn btn-outline-dark"><i
                         class="fa-solid fa-paperclip"></i> CV</a>
             </div>
@@ -336,9 +361,9 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
+        <!-- Derechos de autor -->
         <p>&copy; 2025 DARIO ROMERO. Todos los derechos reservados.</p>
     </footer>
-
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
